Fix edits - align text button - Block Clients: opacity for border - Adaptive block Comands for 1440px - Form: fix checkbox, fix autocomplete field bug

--- a/css/style.css
+++ b/css/style.css
@@ -206,10 +206,6 @@ main {
           flex: 1 1 auto;
 }
 
-.header._fixed + main {
-  padding-top: 110px;
-}
-
 .section-name {
   position: absolute;
   left: 0;
@@ -417,12 +413,18 @@ main {
   }
 }
 .button__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-weight: 600;
   font-size: 16px;
   line-height: 100%;
   letter-spacing: -2%;
   height: 52px;
-  padding: 20px 24px;
+  padding: 0 24px;
   border-radius: 8px;
   color: #fff;
   background-color: #3253ed;
@@ -3459,15 +3461,15 @@ main {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  padding-bottom: 32px;
+  margin-bottom: 32px;
 }
 .custom-checkbox .input-form__error {
   left: 0;
   bottom: 10px;
   top: auto;
 }
-.custom-checkbox._error .input-form__error {
-  display: block;
+.custom-checkbox._error .custom-checkbox__text {
+  color: #ff4a4a;
 }
 .custom-checkbox__input {
   display: none;
@@ -3477,10 +3479,9 @@ main {
       flex-shrink: 0;
   width: 20px;
   height: 20px;
-  border: 1px solid #3253ed;
+  border: 1px solid #787878;
   border-radius: 4px;
   position: relative;
-  border-radius: 8px;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
