--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -62,6 +62,6 @@ main {
   flex: 1 1 auto;
 }
 
-.header._fixed + main {
-  padding-top: 110px;
-}
+// .header._fixed + main {
+//   padding-top: 110px;
+// }
