--- a/scss/base/_components.scss
+++ b/scss/base/_components.scss
@@ -205,6 +205,8 @@
   }
 
   &__text {
+    display: flex;
+    align-items: center;
     font-weight: 600;
     font-size: 16px;
     line-height: 100%;
@@ -212,7 +214,7 @@
 
     height: 52px;
 
-    padding: 20px 24px;
+    padding: 0 24px;
 
     border-radius: 8px;
 
